# ai-commit

./: PYPI_QUICK_GUIDE.md  README.md  ai_commit.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
