[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-git-commit"
version = "0.1.3"
description = "Generate AI-powered git commit messages using local Ollama"
readme = "README.md"
authors = [
    {name = "Himanshu Kumar", email = "himanshu231204@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["git", "commit", "ai", "ollama", "llm", "cli"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/himanshu231204/ai-commit"
Documentation = "https://github.com/himanshu231204/ai-commit#readme"
Repository = "https://github.com/himanshu231204/ai-commit"
"Bug Tracker" = "https://github.com/himanshu231204/ai-commit/issues"
Funding = "https://github.com/sponsors/himanshu231204"

[project.scripts]
ai-commit = "ai_commit:main"

[tool.setuptools]
py-modules = ["ai_commit"]
